--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
-	background-color: rgba(30, 144, 255,0.2);
-	color: rgb(0,0,0);
-    text-align: center;
+	background-color: rgba(186, 120, 140,0.2);
+	color: black;
+	background-size: cover;
+    /*text-align: center;*/
 }
 h1, h2 {
 	font-weight: bold;
@@ -13,6 +14,7 @@ table {
 	margin: 0 auto;
 	font-family: Arial, Verdana, sans-serif;
     background-color: rgba(255,0,0,0.3);
+    display: table;
 
 }
 thead {
@@ -21,12 +23,30 @@ thead {
 	background-color: rgba(255,0,0,0.3);
 }
 th, td {
-	border-top: 2px solid rgba(0,0,0,0.5);
+	border: 2px solid rgba(0,0,0,0.9);
 }
 .syntax {
 	background-color: beige;
 	font-family: monospace;
+	text-align: center;
 }
+img {
+	width: 35em;
+	padding: 10px;
+	margin: 0 auto;
+}
+abbr {
+	text-decoration: none;
+}
+h1 img {
+	height: 100px;
+	width: 100px;
+	margin: 0px auto;
+}
+h1 {
+	border: 5px solid rgba(0,0,0,0.5);
+	text-align: center;
 
+}
 
 
