--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@ body {
 	background-color: rgba(186, 120, 140,0.2);
 	color: black;
 	background-size: cover;
-    /*text-align: center;*/
+}
+#form-elements {
+	text-align: center;
+	padding-top: 20px;
 }
 h1, h2 {
 	font-weight: bold;
@@ -28,7 +31,6 @@ th, td {
 .syntax {
 	background-color: beige;
 	font-family: monospace;
-	text-align: center;
 }
 img {
 	width: 35em;
@@ -48,5 +50,52 @@ h1 {
 	text-align: center;
 
 }
+address {
+	font-size: 20px;
+	background-color: rgba(0,0,0,0.3);
+	line-height: 1.4em;
+	letter-spacing: 0.2em;
+	font-family: monospace;
+}
+a {
+	color: black;
+	font-size: 35px;
+}
+a:hover {
+	color: purple;
+}
+a:active {
+	color: black;
+}
+nav a {
+	text-transform: capitalize;
+	font-size: 100%;
+	font-family: monospace;
+	background-color: rgba(255,0,0,0.3);
+}
 
+/*Styles specificially for list-of-contents.html*/
+ul {
+	list-style: square;
+	margin-top: 100px;
+	position: absolute;
+	left: 5px;
+	border: 3px solid rgba(255,0,0,0.5);
+	padding: 20px;
 
+}
+ul .link{
+	text-decoration: none;
+	font-size: 200%;
+	font-family: Arial, Verdana, sans-serif;
+}
+input {
+	border: 4px solid black;
+	padding: 7px 20px;
+}
+label {
+	font-weight: bold;
+}
+legend {
+	font-weight: bold;
+}
